--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@tc39/ecma262-biblio": "2.0.2329",
-    "ecmarkup": "^12.1.0"
+    "@tc39/ecma262-biblio": "^2.1.2336",
+    "ecmarkup": "^13.0.1"
   }
 }
