[spec] initial spec

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A repository template for ECMAScript proposals.",
   "scripts": {
     "start": "npm run build-loose -- --watch",
-    "build": "npm run build-loose -- --strict",
-    "build-loose": "ecmarkup --load-biblio @tc39/ecma262-biblio --verbose spec.emu index.html --lint-spec"
+    "build": "npm run build-loose",
+    "build-loose": "ecmarkup --load-biblio @tc39/ecma262-biblio spec.emu index.html --lint-spec"
   },
   "homepage": "https://github.com/tc39/template-for-proposals#readme",
   "repository": {
