--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A repository template for ECMAScript proposals.",
   "scripts": {
     "start": "npm run build-loose -- --watch",
-    "build": "npm run build-loose",
+    "build": "npm run build-loose -- --strict",
     "build-loose": "ecmarkup --load-biblio @tc39/ecma262-biblio spec.emu index.html --lint-spec"
   },
   "homepage": "https://github.com/tc39/template-for-proposals#readme",
